--- a/src/main/resources/templates/estoqueAdd.html
+++ b/src/main/resources/templates/estoqueAdd.html
@@ -1,74 +1,77 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width" />
-	<title>Cadastro de Clientes</title>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Cadastro de Clientes</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-	<div class="panel panel-default">
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <a class="navbar-brand" href="@{/telaInicial/}">Controle de Estoque</a>
-		    </div>
-		    <ul class="nav navbar-nav">
-		      <li><a th:href="@{/cliente/}">Cliente</a></li>
-		      <li><a th:href="@{/funcionario/}">Funcionario</a></li>
-		      <li><a th:href="@{/fornecedor/}">Fornecedor</a></li>
-		      <li><a th:href="@{/produto/}">Produto</a></li>
-		      <li><a th:href="@{/venda/}">Venda</a></li>
-		      <li><a th:href="@{/estoque/}">Estoque</a></li>
-		    </ul>
-		  </div>
-		</nav>
-		<div class="panel-body">
-			<form class="form-horizontal" th:object="${estoque}" th:action="@{/estoque/save}" method="POST" style="margin: 10px">
-				<div class="form-group">
- 					<fieldset>
-						<div class="form-group row">
-							<div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
-								<div th:each="detailedError : ${#fields.detailedErrors()}">
-									<span th:text="${detailedError.message}"></span>
-								</div>
-							</div>
-						</div> 					
-						 <div class="form-group row">                                                          
-							<div class="col-md-2" th:classappend="${#fields.hasErrors('codigo')}? 'has-error'">
-							    <label>Codigo</label>
-							    <input type="text" class="form-control input-sm" th:field="*{codigo}" autofocus="autofocus" placeholder="Informe o codigo" maxlength="11" />
-							</div>
-							<div class="col-md-2" th:classappend="${#fields.hasErrors('nome')}? 'has-error'">
-							    <label>Nome</label>
-							    <input type="text" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus" placeholder="Informe o nome do Estoque" maxlength="255"/>
-							</div>
-							<div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_total')}? 'has-error'">
-							    <label>Quantidade Total</label>
-							    <input type="text" class="form-control input-sm" th:field="*{qtd_total}" autofocus="autofocus" placeholder="Informe a quantidade total para este Estoque" maxlength="50"/>
-							</div>
-							<div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_min')}? 'has-error'">
-							    <label>Quantidade Mínima</label>
-							    <input type="text" class="form-control input-sm" th:field="*{qtd_min}" autofocus="autofocus" placeholder="Informe a quantidade mínima" maxlength="50"/>
-							</div>
-							<div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_max')}? 'has-error'">
-							    <label>Quantidade Máxima</label>
-							    <input type="text" class="form-control input-sm" th:field="*{qtd_max}" autofocus="autofocus" placeholder="Informe a quantidade máxima" maxlength="50"/>
-							</div>
-							
-							
-						 </div>					
-					</fieldset>
-				</div>
-				<div class="form-group row">
-					<button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-					<a th:href="@{/estoque/}" class="btn btn-sm btn-default">Cancelar</a>
-				</div>
-			</form>
-		</div>
-	</div>
+    <div class="panel panel-default">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" th:href="@{/telaInicial/}">Controle de Estoque</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a th:href="@{/cliente/}">Cliente</a></li>
+                    <li><a th:href="@{/funcionario/}">Funcionario</a></li>
+                    <li><a th:href="@{/fornecedor/}">Fornecedor</a></li>
+                    <li><a th:href="@{/produto/}">Estoque</a></li>
+                    <li><a th:href="@{/venda/}">Venda</a></li>
+                    <!--<li><a th:href="@{/estoque/}">Estoque</a></li>-->
+                </ul>
+            </div>
+        </nav>
+        <div class="panel-body">
+            <form class="form-horizontal" th:object="${estoque}" th:action="@{/estoque/save}" method="POST" style="margin: 10px">
+                <div class="form-group">
+                    <fieldset>
+                        <div class="form-group row">
+                            <div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
+                                <div th:each="detailedError : ${#fields.detailedErrors()}">
+                                    <span th:text="${detailedError.message}"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-2" th:classappend="${#fields.hasErrors('codigo')}? 'has-error'">
+                                <label>Codigo</label>
+                                <input type="text" class="form-control input-sm" th:field="*{codigo}" autofocus="autofocus" placeholder="Informe o codigo" maxlength="11" />
+                            </div>
+                            <div class="col-md-2" th:classappend="${#fields.hasErrors('nome')}? 'has-error'">
+                                <label>Nome</label>
+                                <input type="text" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus" placeholder="Informe o nome do Estoque" maxlength="255" />
+                            </div>
+                            <div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_total')}? 'has-error'">
+                                <label>Quantidade Total</label>
+                                <input type="text" class="form-control input-sm" th:field="*{qtd_total}" autofocus="autofocus" placeholder="Informe a quantidade total para este Estoque" maxlength="50" />
+                            </div>
+                            <div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_min')}? 'has-error'">
+                                <label>Quantidade Mínima</label>
+                                <input type="text" class="form-control input-sm" th:field="*{qtd_min}" autofocus="autofocus" placeholder="Informe a quantidade mínima" maxlength="50" />
+                            </div>
+                            <div class="col-md-4" th:classappend="${#fields.hasErrors('qtd_max')}? 'has-error'">
+                                <label>Quantidade Máxima</label>
+                                <input type="text" class="form-control input-sm" th:field="*{qtd_max}" autofocus="autofocus" placeholder="Informe a quantidade máxima" maxlength="50" />
+                            </div>
+
+
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="form-group row">
+                    <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
+                    <a th:href="@{/estoque/}" class="btn btn-sm btn-default">Cancelar</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
